--- a/scMaGeck_EFF_prep.ipynb
+++ b/scMaGeck_EFF_prep.ipynb
@@ -2693,9 +2693,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Dev/GPuy310",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "gpuy310-dev"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2707,7 +2707,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.9.12"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
